# dynamic-separator-applet

./: .gitignore  CMakeLists.txt  README.md  dynamic-separator-applet  org.gnome.panel.applet.DynamicSeparator.gschema.xml  org.gnome.panel.applet.DynamicSeparator.panel-applet  org.gnome.panel.applet.DynamicSeparatorApplet.gschema.xml  org.gnome.panel.applet.DynamicSeparatorApplet.panel-applet.in  org.gnome.panel.applet.DynamicSeparatorAppletFactory.service.in  org.gnome.panel.applet.DynamicSeparatorFactory.service
po/: POTFILES.in  build.sh  dynamic-separator-applet.pot  es.po  update.sh
